--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -1,1 +1,32 @@
-@import 'partitials/flex'
+@import 'partitials/flex';
+@import 'partitials/theme';
+
+.wrapper {
+    width: 100vw;
+    height: 100vh;
+    position: relative;
+
+    canvas {
+        width: 100%;
+        height: 100%;
+        display: block;
+    }
+
+    .welcome {
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        z-index: 1;
+
+        h1 {
+            font-weight: 300;
+            text-align: center;
+        }
+        h3 {
+            font-weight: 400;
+            text-align: center;
+        }
+    }
+}
