JR-9 #gameplay created, now it's a real game

--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -29,4 +29,26 @@
             text-align: center;
         }
     }
+
+    #gameOverModal{
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        min-width: 300px;
+        padding: 20px 15px;
+        background-color: white;
+        box-shadow: 0 -2px 2px 4px rgba(0, 0, 0, 0.2);
+        text-align: center;
+
+        &:not(.active) {
+            display: none;
+        }
+
+        span {
+            font: 400 normal 32px monospace;
+            display: inline-block;
+            margin-bottom: 30px;
+        }
+    }
 }
