--- a/public/scss/partitials/_theme.scss
+++ b/public/scss/partitials/_theme.scss
@@ -9,6 +9,19 @@ body {
     padding: 0;
 
     * {
-        font-family: Montserrat, sans-serif;
+        font-family: monospace, sans-serif;
     }
+}
+
+.btn {
+    cursor: pointer;
+    outline: none;
+    border: none;
+    border-radius: 0;
+    height: 32px;
+    min-width: 100px;
+    color: white;
+    background-color: black;
+    font: 400 normal 14px monospace;
+    padding: 0 10px;
 }
