--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -24,13 +24,14 @@
             font-weight: 300;
             text-align: center;
         }
+
         h3 {
             font-weight: 400;
             text-align: center;
         }
     }
 
-    #gameOverModal{
+    #gameDialogModal {
         position: absolute;
         left: 50%;
         top: 50%;
@@ -49,6 +50,50 @@
             font: 400 normal 32px monospace;
             display: inline-block;
             margin-bottom: 30px;
+        }
+    }
+
+    #pauseBtn {
+        width: 24px;
+        height: 24px;
+        background-color: grey;
+        position: fixed;
+        right: 20px;
+        top: 20px;
+        cursor: pointer;
+        outline: none;
+        border: none;
+        margin: 0;
+
+        &::before,
+        &::after {
+            content: '';
+            display: block;
+            position: absolute;
+            width: 4px;
+            height: 14px;
+            background-color: #2a2a2a;
+            left: 6px;
+            top: 5px;
+            margin: 0;
+        }
+
+        &::after {
+            left: 14px;
+        }
+
+        &.active::after {
+            width: 0;
+            background: transparent;
+            height: 0;
+            border-top: 8px solid transparent;
+            border-left: 14px solid #2a2a2a;
+            border-bottom: 8px solid transparent;
+            left: 6px;
+        }
+
+        &.active::before {
+            width: 1px;
         }
     }
 }
