--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -10,6 +10,7 @@
         width: 100%;
         height: 100%;
         display: block;
+        outline: none;
     }
 
     .welcome {
@@ -53,17 +54,20 @@
         }
     }
 
-    #pauseBtn {
+    .control_btn {
         width: 24px;
         height: 24px;
         background-color: grey;
         position: fixed;
-        right: 20px;
         top: 20px;
         cursor: pointer;
         outline: none;
         border: none;
         margin: 0;
+    }
+
+    #pauseBtn {
+        right: 20px;
 
         &::before,
         &::after {
@@ -86,14 +90,28 @@
             width: 0;
             background: transparent;
             height: 0;
-            border-top: 8px solid transparent;
+            border-top: 7px solid transparent;
             border-left: 14px solid #2a2a2a;
-            border-bottom: 8px solid transparent;
-            left: 6px;
+            border-bottom: 7px solid transparent;
+            left: 7px;
         }
 
         &.active::before {
             width: 1px;
+        }
+    }
+    #audioBtn {
+        right: 60px;
+
+        &::before {
+            content: url('../assets/icons/volume_off.svg');
+            position: absolute;
+            left: 3px;
+            top: 3px;
+        }
+
+        &.active::before {
+            content: url('../assets/icons/volume_up.svg');
         }
     }
 }
